--- a/requirements.txt
+++ b/requirements.txt
@@ -3,33 +3,46 @@ anyio==4.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+clip @ git+https://github.com/ultralytics/CLIP.git@74d72722e3b7c2a28961a805b20b5a7c05a75cf8
 contourpy==1.2.1
 cycler==0.12.1
+Cython==3.0.10
+decorator==4.4.2
 dnspython==2.6.1
+dtw-python==1.5.1
 email_validator==2.2.0
 fastapi==0.111.1
 fastapi-cli==0.0.4
 filelock==3.15.4
 fonttools==4.53.1
 fsspec==2024.6.1
+ftfy==6.2.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+imageio==2.34.2
+imageio-ffmpeg==0.5.1
 Jinja2==3.1.4
 kiwisolver==1.4.5
+llvmlite==0.43.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.1
 mdurl==0.1.2
+more-itertools==10.3.0
+moviepy==1.0.3
 mpmath==1.3.0
 networkx==3.3
+numba==0.60.0
 numpy==1.26.4
+openai-whisper==20231117
 opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
+proglog==0.1.10
 psutil==6.0.0
 py-cpuinfo==9.0.0
 pydantic==2.8.2
@@ -41,15 +54,18 @@ python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
+regex==2024.5.15
 requests==2.32.3
 rich==13.7.1
 scipy==1.14.0
 seaborn==0.13.2
+setuptools==71.0.3
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
 sympy==1.13.0
+tiktoken==0.7.0
 torch==2.2.2
 torchvision==0.17.2
 tqdm==4.66.4
@@ -62,4 +78,6 @@ urllib3==2.2.2
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
+wcwidth==0.2.13
 websockets==12.0
+whisper-timestamped==1.15.4
